spec v2:connection->l2vpn
