# sdx_controller/models/connection_v2_endpoints.py
@@ -1,0 +1,88 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from sdx_controller.models.base_model_ import Model
+from sdx_controller import util
+
+
+class ConnectionV2Endpoints(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, port_id: str=None, vlan: str=None):  # noqa: E501
+        """ConnectionV2Endpoints - a model defined in Swagger
+
+        :param port_id: The port_id of this ConnectionV2Endpoints.  # noqa: E501
+        :type port_id: str
+        :param vlan: The vlan of this ConnectionV2Endpoints.  # noqa: E501
+        :type vlan: str
+        """
+        self.swagger_types = {
+            'port_id': str,
+            'vlan': str
+        }
+
+        self.attribute_map = {
+            'port_id': 'port_id',
+            'vlan': 'vlan'
+        }
+        self._port_id = port_id
+        self._vlan = vlan
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'ConnectionV2Endpoints':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The connection_v2_endpoints of this ConnectionV2Endpoints.  # noqa: E501
+        :rtype: ConnectionV2Endpoints
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def port_id(self) -> str:
+        """Gets the port_id of this ConnectionV2Endpoints.
+
+
+        :return: The port_id of this ConnectionV2Endpoints.
+        :rtype: str
+        """
+        return self._port_id
+
+    @port_id.setter
+    def port_id(self, port_id: str):
+        """Sets the port_id of this ConnectionV2Endpoints.
+
+
+        :param port_id: The port_id of this ConnectionV2Endpoints.
+        :type port_id: str
+        """
+
+        self._port_id = port_id
+
+    @property
+    def vlan(self) -> str:
+        """Gets the vlan of this ConnectionV2Endpoints.
+
+
+        :return: The vlan of this ConnectionV2Endpoints.
+        :rtype: str
+        """
+        return self._vlan
+
+    @vlan.setter
+    def vlan(self, vlan: str):
+        """Sets the vlan of this ConnectionV2Endpoints.
+
+
+        :param vlan: The vlan of this ConnectionV2Endpoints.
+        :type vlan: str
+        """
+
+        self._vlan = vlan
