# sdx_controller/models/connection_v2_notifications.py
@@ -1,0 +1,62 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from sdx_controller.models.base_model_ import Model
+from sdx_controller import util
+
+
+class ConnectionV2Notifications(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, email: str=None):  # noqa: E501
+        """ConnectionV2Notifications - a model defined in Swagger
+
+        :param email: The email of this ConnectionV2Notifications.  # noqa: E501
+        :type email: str
+        """
+        self.swagger_types = {
+            'email': str
+        }
+
+        self.attribute_map = {
+            'email': 'email'
+        }
+        self._email = email
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'ConnectionV2Notifications':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The connection_v2_notifications of this ConnectionV2Notifications.  # noqa: E501
+        :rtype: ConnectionV2Notifications
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def email(self) -> str:
+        """Gets the email of this ConnectionV2Notifications.
+
+
+        :return: The email of this ConnectionV2Notifications.
+        :rtype: str
+        """
+        return self._email
+
+    @email.setter
+    def email(self, email: str):
+        """Sets the email of this ConnectionV2Notifications.
+
+
+        :param email: The email of this ConnectionV2Notifications.
+        :type email: str
+        """
+
+        self._email = email
