# sdx_controller/models/l2vpn_body.py
@@ -1,0 +1,36 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from sdx_controller.models.base_model_ import Model
+from sdx_controller import util
+
+
+class L2vpnBody(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self):  # noqa: E501
+        """L2vpnBody - a model defined in Swagger
+
+        """
+        self.swagger_types = {
+        }
+
+        self.attribute_map = {
+        }
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'L2vpnBody':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The l2vpn_body of this L2vpnBody.  # noqa: E501
+        :rtype: L2vpnBody
+        """
+        return util.deserialize_model(dikt, cls)
